<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white"
    tools:context="com.alian.schetime.ui.activities.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_content_desc"
            android:src="@drawable/welcome_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/label_welcome_title"
            android:textColor="@color/custom_black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_to_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/image_view_logo" />

        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_welcome_text"
            app:layout_constraintStart_toStartOf="@+id/text_view_title"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

        <Button
            android:id="@+id/button_to_sign_in"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/custom_pink"
            android:text="@string/label_btn_welcome_sign_in"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_description" />

        <Button
            android:id="@+id/button_to_sign_up"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/label_btn_welcome_sign_up"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_to_sign_in" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".1" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>