<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white"
    tools:context="com.alian.schetime.ui.activities.auth.SignUpActivity">

    <TextView
        android:id="@+id/text_view_title_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_sign_up_title"
        android:textColor="@color/custom_black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_view_sign_in_desc"
        app:layout_constraintStart_toStartOf="@+id/text_view_sign_in_desc" />

    <TextView
        android:id="@+id/text_view_sign_in_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/label_sign_up_desc"
        android:textColor="@color/custom_dark_gray"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_full_name"
        app:layout_constraintStart_toStartOf="@+id/edit_text_full_name" />

    <EditText
        android:id="@+id/edit_text_full_name"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_custom_bg"
        android:hint="@string/label_full_name"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_custom_bg"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_custom_bg"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/custom_pink"
        android:text="@string/label_btn_sign_up"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".7" />

</androidx.constraintlayout.widget.ConstraintLayout>