<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context="com.alian.schetime.ui.fragments.ProfileFragment">

    <ImageView
        android:id="@+id/image_view_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_content_desc"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_user_name"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/label_profile_name_example"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_view_user"
        app:layout_constraintTop_toTopOf="@+id/image_view_user" />

    <TextView
        android:id="@+id/text_view_job_title"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/text_view_user_name"
        app:layout_constraintTop_toBottomOf="@+id/text_view_user_name" />

    <ImageButton
        android:id="@+id/image_view_menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/image_content_desc"
        android:src="@drawable/ic_menu"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view"
        app:layout_constraintTop_toTopOf="@+id/text_view_user_name" />

    <Button
        android:id="@+id/button_edit_profile"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_edit_profile"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/text_view_user_name"
        app:layout_constraintTop_toBottomOf="@+id/text_view_job_title" />

    <TextView
        android:id="@+id/text_view_my_schedule"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_my_schedule"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/image_view_user"
        app:layout_constraintTop_toBottomOf="@+id/image_view_user" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_my_schedule"
        tools:listitem="@layout/my_item_note" />
</androidx.constraintlayout.widget.ConstraintLayout>